# axum-postgres-redis

./: .env  .env.prod  Cargo.toml  build.sh
src/: api.rs  generic.rs  lib.rs  main.rs
src/api/: user.rs
