[package]
name = "axum-postgres-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bb8-redis = "0.18.0"
clap = { version = "4.5.23", features = ["derive", "env"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
redis = "0.27.6"
serde = "1.0.216"
serde_json = "1.0.133"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = "0.7.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
